# Advent-of-Code-2025--CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-google-tests.yml
cpp/: Day.h
cpp/core/: AocException.cpp  AocException.h  Grid.h  HashConfig.h  MemoryHelper.h  Orientation.h  Pair.h  Range.cpp  Range.h  WordSearchGrid.cpp  WordSearchGrid.h  WordSearchRow.cpp  WordSearchRow.h
cpp/day1/: Day01.cpp  Day01.h  Dial.cpp  Dial.h
cpp/day10/: ButtonSchematic.cpp  ButtonSchematic.h  Day10.cpp  Day10.h  LightDiagram.cpp  LightDiagram.h  LightMachine.cpp  LightMachine.h
cpp/day2/: Day02.cpp  Day02.h  InvalidIdFinder.cpp  InvalidIdFinder.h  Range.cpp  Range.h
cpp/day3/: BatteryBank.cpp  BatteryBank.h  Day03.cpp  Day03.h
cpp/day4/: Day04.cpp  Day04.h  PaperGrid.cpp  PaperGrid.h
cpp/day5/: Day05.cpp  Day05.h
cpp/day7/: Beam.cpp  Beam.h  BeamPath.h  Day07.cpp  Day07.h
cpp/day8/: Circuits.cpp  Circuits.h  Day08.cpp  Day08.h  JunctionBox.cpp  JunctionBox.h
cpp/day9/: Day09.cpp  Day09.h  GreenTileFinder.cpp  GreenTileFinder.h
cpp/helper/: AOCInitializer.cpp  AOCInitializer.h  FileReader.cpp  FileReader.h  SolutionInput.cpp  SolutionInput.h  StringUtils.cpp  StringUtils.h
googletest/: CMakeLists.txt
googletest/core/: PairTests.cpp  RangeTest.cpp
googletest/day1/: Day1Test.cpp  DialTest.cpp
googletest/day10/: ButtonSchematic_Tests.cpp  LightDiagram_Tests.cpp  LightMachine_Tests.cpp
googletest/day2/: InvalidIdFinderTest.cpp  RangeTest.cpp
googletest/day3/: BatteryBankTest.cpp
googletest/day4/: PaperGridTest.cpp
googletest/day7/: BeamTests.cpp
googletest/day8/: CircuitsTests.cpp  JunctionBoxTests.cpp
googletest/day9/: GreenTileFinderTests.cpp
googletest/example/: ExampleTests.cpp  Example_Tests.cpp
googletest/helper/: SolutionHelperTests.cpp  SolutionInputTests.cpp
googletest/testData/: day5-check.txt
googletest/testHelper/: InputUtils.cpp  InputUtils.h
puzzle/: Day1.md  Day10.md  Day11.md  Day12.md  Day2.md  Day3.md  Day4.md  Day5.md  Day6.md  Day7.md  Day8.md  Day9.md
